--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,6 @@ dependencies {
     implementation 'com.google.dagger:dagger:2.44'
     kapt 'com.google.dagger:dagger-compiler:2.44'
     implementation 'javax.inject:javax.inject:1'
+
+    implementation 'com.jakewharton.timber:timber:5.0.1'
 }
